# SOAR_Pypeit_PASSTA

./: .gitignore  LICENSE  README.md  environment.yml  goodman_file_organize.py  goodman_pypeit_reduce.py  goodman_spec_download.py  lcogt.py  pyproject.toml  slack_utils.py
caldb/: caldb.txt  hr1996.400_M1.1.0_LONG_SLIT.20251202_sensfunc.fits  hr1996.400_M1.1.0_LONG_SLIT.20260119_sensfunc.fits  hr1996.400_M1.1.0_LONG_SLIT.20260127_sensfunc.fits  hr1996.400_M1.1.0_LONG_SLIT.20260202_sensfunc.fits  hr1996.400_M1.1.0_LONG_SLIT.20260211_sensfunc.fits  hr1996.400_M2.1.0_LONG_SLIT.20251202_sensfunc.fits  hr1996.400_M2.1.0_LONG_SLIT.20260119_sensfunc.fits  hr1996.400_M2.1.0_LONG_SLIT.20260202_sensfunc.fits  hr1996.400_M2.1.0_LONG_SLIT.20260207_sensfunc.fits  hr1996.400_M2.1.0_LONG_SLIT.20260211_sensfunc.fits  hr5501.400_M1.1.0_LONG_SLIT.20250805_sensfunc.fits  hr5501.400_M1.1.0_LONG_SLIT.20250811_sensfunc.fits  hr5501.400_M1.1.0_LONG_SLIT.20250828_sensfunc.fits  hr5501.400_M2.1.0_LONG_SLIT.20250805_sensfunc.fits  hr5501.400_M2.1.0_LONG_SLIT.20250811_sensfunc.fits  hr5501.400_M2.1.0_LONG_SLIT.20250826_sensfunc.fits  hr5501.400_M2.1.0_LONG_SLIT.20250828_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250807_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250816_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250903_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250904_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250912_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250914_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250916_sensfunc.fits  hr7596.400_M1.1.0_LONG_SLIT.20250917_sensfunc.fits  (+29 more)
(+33 files in other folders)
